feat: add meta tags

--- a/index.html
+++ b/index.html
@@ -2,9 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="Convert Excel files to VCF format quickly and easily. Ideal for managing contacts.">
+    <meta name="keywords" content="Excel to VCF, contact converter, VCF converter, bulk contacts export">
     <link rel="icon" type="image/svg+xml" href="/public/logo-head.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Excel to VCF Converter</title>
+    <meta property="og:title" content="Excel to VCF Converter" />
+    <meta property="og:description" content="Convert Excel files to VCF format quickly and easily. Ideal for managing contacts." />
+    <meta property="og:image" content="/public/logo-head.svg" />
+    <meta property="og:url" content="https://your-domain.com" />
+    <meta property="og:type" content="website" />
+
   </head>
   <body>
     <div id="root"></div>
