--- a/index.html
+++ b/index.html
@@ -1,15 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-11WQRGZ5LP"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'G-11WQRGZ5LP');
-  </script>
     <meta charset="UTF-8" />
     <meta name="description" content="Convert Excel files to VCF format quickly and easily. Ideal for managing contacts.">
     <meta name="keywords" content="Excel to VCF, contact converter, VCF converter, bulk contacts export">
@@ -19,7 +10,7 @@
     <meta property="og:title" content="Excel to VCF Converter" />
     <meta property="og:description" content="Convert Excel files to VCF format quickly and easily. Ideal for managing contacts." />
     <meta property="og:image" content="/public/logo-head.svg" />
-    <meta property="og:url" content="https://your-domain.com" />
+    <meta property="og:url" content="https://excel2vcf.xyz" />
     <meta property="og:type" content="website" />
 
   </head>
