feat: add google adSense

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
     gtag('config', 'G-11WQRGZ5LP');
   </script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4461015446524197"
+  crossorigin="anonymous"></script>
     <meta charset="UTF-8" />
     <meta name="description" content="Convert Excel files to VCF format quickly and easily. Ideal for managing contacts.">
     <meta name="keywords" content="Excel to VCF, contact converter, VCF converter, bulk contacts export">
