--- a/index.html
+++ b/index.html
@@ -2,20 +2,21 @@
 <html lang="en">
   <head>
     <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-11WQRGZ5LP"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-11WQRGZ5LP"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
-    gtag('config', 'G-11WQRGZ5LP');
-  </script>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4461015446524197"
-  crossorigin="anonymous"></script>
+      gtag('config', 'G-11WQRGZ5LP');
+    </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4461015446524197"
+    crossorigin="anonymous"></script>
     <meta charset="UTF-8" />
     <meta name="description" content="Convert Excel files to VCF format quickly and easily. Ideal for managing contacts.">
     <meta name="keywords" content="Excel to VCF, contact converter, VCF converter, bulk contacts export">
     <link rel="icon" type="image/svg+xml" href="/public/logo-head.svg" />
+    <link rel="canonical" href="https://excel2vcf.xyz" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Excel to VCF Converter</title>
     <meta property="og:title" content="Excel to VCF Converter" />
@@ -23,7 +24,23 @@
     <meta property="og:image" content="/public/logo-head.svg" />
     <meta property="og:url" content="https://excel2vcf.xyz" />
     <meta property="og:type" content="website" />
-
+    
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebApplication",
+      "name": "Excel to VCF Converter",
+      "description": "Convert Excel files to VCF format quickly and easily. Ideal for managing contacts.",
+      "url": "https://excel2vcf.xyz",
+      "applicationCategory": "Utility",
+      "operatingSystem": "All",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "USD"
+      }
+    }
+    </script>
   </head>
   <body>
     <div id="root"></div>
